...
        let presentCameraImagePicker = { [weak self] () -> Void in
            guard let welf = self else { return }
            imagePicker.sourceType = .camera
            imagePicker.cameraDevice = .front
            welf.present(imagePicker, animated: true, completion: nil)
        }
        let actionSheet = UIAlertController(title: NSLocalizedString("Get image from:", comment: "RegisterController"), message: nil, preferredStyle: .actionSheet)
        let photoLibrary = UIAlertAction(title: NSLocalizedString("Photo library", comment: "RegisterController"), style: .default) { [weak self] _ in
            guard let welf = self else { return }
            welf.dismiss(animated: true, completion: nil)
            presentPhotoLibraryImagePicker()
        }
        let camera = UIAlertAction(title: NSLocalizedString("Camera", comment: "RegisterController"), style: .default) { [weak self] _ in
            guard let welf = self else { return }
            welf.dismiss(animated: true, completion: nil)
            presentCameraImagePicker()
        }
        let cancel = UIAlertAction(title: NSLocalizedString("Cancel", comment: "RegisterController"), style: .cancel, handler: nil)
        if UIImagePickerController.isSourceTypeAvailable(.photoLibrary), UIImagePickerController.isSourceTypeAvailable(.camera) {
...
