...
                        <viewControllerLayoutGuide type="bottom" id="qBU-Mj-cnk"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="6zv-Ll-jQn">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imagePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="i5p-WJ-5Pt">
                                <rect key="frame" x="32" y="72" width="256" height="170.5"/>
                                <gestureRecognizers/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="i5p-WJ-5Pt" secondAttribute="height" multiplier="1.5:1" id="BL7-5c-9az"/>
                                </constraints>
                                <connections>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f7k-ZO-kSR">
                                <rect key="frame" x="32" y="250.5" width="256" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="#hashtag" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hJI-1X-ygw">
                                <rect key="frame" x="32" y="288.5" width="256" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
...
